#3284 [Fixed] Autosuggest: Onterechte scrollbar

--- a/packages/core/src/components/scrollable/scrollable.scss
+++ b/packages/core/src/components/scrollable/scrollable.scss
@@ -20,7 +20,7 @@
     block-size: 100%;
     max-block-size: inherit;
     min-block-size: inherit;
-    overflow-y: auto;
+    overflow-y: hidden;
     padding-inline: var(--_dt-scrollable-container-padding-inline, 0);
     padding-block: var(--_dt-scrollable-container-padding-block, 0);
     border-end-start-radius: var(--_dt-scrollable-container-border-end-start-radius, 0);
@@ -53,6 +53,12 @@
     &::after {
       background-image: linear-gradient(to bottom, rgba(183, 183, 183, 0), rgba(183, 183, 183, 0.7));
       inset-block-end: 0;
+    }
+
+    &.dso-scroll-bottom,
+    &.dso-scroll-top,
+    &.dso-scroll-middle {
+      overflow-y: auto;
     }
 
     &.dso-scroll-bottom {
